Update features and newsletter form

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <video autoplay loop muted poster="images/vecteezy_eating-ice-cream-by-spoon-from-glass-cup_5017540.mp4" source src="images/vecteezy_five-yellow-stars-providing-satisfaction-levels-in-customer_35929559.mp4" type="video/mp4"></video>
           </div>
           <p class="hover-popup textOne">
-            A video from Vecteezy showing stars lighing up for a review. Original video may be found at<a href="https://www.vecteezy.com/free-videos/gold">Gold Stock Videos by Vecteezy</a>
+            A video from Vecteezy showing stars lighing up for a review. Original video may be found at the following link: <a href="https://www.vecteezy.com/free-videos/gold">Gold Stock Videos by Vecteezy</a>
     
           </p>
         </div>
@@ -140,17 +140,17 @@
     <section id="features2">
 
       <div class="feature row3">
-      <h2>Share a Scoop</h2>
-      <p> Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community today! Make every moment a sweet one!</p>
+      <h2>Points and Prizes</h2>
+      <p> Reward your sweet tooth! With Twemary you can win prizes! Earn points for sharing photos, posting reviews, or trying the flavor of the moth.</p>
         <div class="center">
           <div id='image-three' class="image-container">
 
         <div id="hotspot2" class="hotspot">
           <div class="empty-text">
-            <video autoplay loop muted poster="images/vecteezy_eating-ice-cream-by-spoon-from-glass-cup_5017540.mp4" source src="images/vecteezy_eating-ice-cream-by-spoon-from-glass-cup_5017540.mp4" type="video/mp4"></video>
+            <video autoplay loop muted poster="images/vecteezy_smiling-successful-businesswoman-with-gold-trophy-happy_13051384.mp4" source src="images/vecteezy_smiling-successful-businesswoman-with-gold-trophy-happy_13051384.mp4" type="video/mp4"></video>
           </div>
           <p class="hover-popup textOne">
-            A video from Vecteezy showing two bowls of ice cream. Original video may be found at <a href="https://www.vecteezy.com/free-videos/adorable">Adorable Stock Videos by Vecteezy</a>
+            A video from Vecteezy showing a woman celebrating her prize. Original video may be found at the following link: <a href="https://www.vecteezy.com/free-videos/woman">Woman Stock Videos by Vecteezy</a>
           </p>
         </div>
     </div>
@@ -169,24 +169,22 @@
       </div>
     -->
 
-  <div class="feature row">
-  <h2>Points and Prizes</h2>
-  <p>Reward your sweet tooth! With Twemary you can earn points and win prizes!</p>
+  <div class="feature row4">
+  <h2>Share a Scoop</h2>
+  <p>Looking for a scoop of camaraderie? Connect with fellow ice cream aficionados and join the Twemary community today! Make every moment a sweet one!</p>
     <div class="center">
       <div id='image-four' class="image-container">
 
     <div id="hotspot2" class="hotspot">
       <div class="empty-text">
-        <video autoplay loop muted poster="images/vecteezy_smiling-successful-businesswoman-with-gold-trophy-happy_13051384.mp4" source src="images/vecteezy_smiling-successful-businesswoman-with-gold-trophy-happy_13051384.mp4" type="video/mp4"></video>
+        <video autoplay loop muted poster="images/vecteezy_eating-ice-cream-by-spoon-from-glass-cup_5017540.mp4" source src="images/vecteezy_eating-ice-cream-by-spoon-from-glass-cup_5017540.mp4" type="video/mp4"></video>
       </div>
       <p class="hover-popup textOne">
-        A video from Vecteezy showing a woman celebrating her prize. Original video may be found at <a href="https://www.vecteezy.com/free-videos/woman">Woman Stock Videos by Vecteezy</a>
+        A video from Vecteezy showing two bowls of ice cream. Original video may be found at the following link: <a href="https://www.vecteezy.com/free-videos/adorable">Adorable Stock Videos by Vecteezy</a>
       </p>
     </div>
 </div>
 </div>
-
-
 </div>
 
 
@@ -219,7 +217,7 @@
 
           <div class="inputContainer">
 	    <label for="email" class="label">Email</label>
-            <input id="email" name="email" type="text" class=" input" placeholder="paris@email.com" required>
+            <input id="email" name="email" type="text" class="input" placeholder="paris@email.com" required>
           </div>
 
           <input type="submit" class="submitBtn" value="Sign up">
