Fix screen resizing issues Update HTML with hamburger code Add code for hamburger in JavaScript file Include code for navigation in contact.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
           <li><a href="contact.html"><em>Contact</em></a></li>
         </ul>
       </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
+
+<!--
       <nav class="mobile">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
@@ -46,6 +53,7 @@
           <li><a href="contact.html"><em>Contact</em></a></li>
         </ul>
       </nav>
+    -->
     </section>
 
   </header>
