--- a/contact.html
+++ b/contact.html
@@ -23,33 +23,43 @@
 
 <body>
   <!--navigation-->
-  <header class="page-header">
-    <div class="fixed-width clearfix">
-      <div class="logo"><img src="https://placehold.co/75x75" alt="logo"></div>
-      <h1><a href="index.html">Twemary</a></h1>
-      <nav>
+  <header>
+    <h1>Twemary</h1>
+    <section class="naviagation-bar">
+      <a href="#"><img src="./images/TwemaryLogoTypeOW.svg" alt="logo" class="logo"></a>
+      <nav class="head-nav">
         <ul>
           <li><a href="index.html"><em>Home</em></a></li>
-          <li><a href="about.html"><em>About</em></a></li>
+          <!-- <li><a href="about.html"><em>About</em></a></li> -->
           <li><a href="#"><em>Contact</em></a></li>
         </ul>
       </nav>
-    </div>
+      <nav class="mobile">
+        <ul>
+          <li><a href="#"><em>Home</em></a></li>
+          <li><a href="about.html"><em>About</em></a></li>
+          <li><a href="contact.html"><em>Contact</em></a></li>
+        </ul>
+      </nav>
+    </section>
+
   </header>
 
   <footer class="page-footer">
-    <div class="page-footer-content fixed-width clearfix">
-      <ul>
-        <li><a href="index.html"><em>Home</em></a></li>
-        <li><a href="about.html"><em>About</em></a></li>
-        <li><a href="#"><em>Contact</em></a></li>
-      </ul>
-      <p class="copyright">
-        &#169 2024
-      </p>
-    </div>
+    <section class="page-footer-content fixed-width clearfix">
+      <span class="copyright">
+        &copy 2024 Rebecca Crecelius
+      </span>
+      <nav>
+        <ul class="footer-link">
+          <li><a href="index.html">Home</a></li>
+          <!-- <li><a href="about.html"><em>About</em></a></li> -->
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </section>
   </footer>
-
+  <script src="scripts/twemary.js"></script>
 </body>
 
 </html>
