--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Twemary</title>
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
 
@@ -18,7 +15,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Concert+One&display=swap"
+    rel="stylesheet">
+
+
   <link href="css/style.css" type="text/css" rel="stylesheet">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 
 <body>
@@ -34,6 +39,13 @@
           <li><a href="#"><em>Contact</em></a></li>
         </ul>
       </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
+
+<!--
       <nav class="mobile">
         <ul>
           <li><a href="#"><em>Home</em></a></li>
@@ -41,10 +53,17 @@
           <li><a href="contact.html"><em>Contact</em></a></li>
         </ul>
       </nav>
+    -->
     </section>
 
   </header>
 
+
+  <!--main content-->
+  <main>
+
+  </main>
+  <!--Footer-->
   <footer class="page-footer">
     <section class="page-footer-content fixed-width clearfix">
       <span class="copyright">
@@ -59,7 +78,6 @@
       </nav>
     </section>
   </footer>
-  <script src="scripts/twemary.js"></script>
-</body>
+  </body>
 
 </html>
