Fix footer on contact page

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 
   </main>
   <!--Footer-->
-  <footer class="page-footer">
+  <footer class="page-footer page-footer-contact">
     <section class="page-footer-content fixed-width clearfix">
       <span class="copyright">
         &copy 2024 Rebecca Crecelius
